--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <option value="">Pilih Kelas</option>
         <option value="A">A</option>
         <option value="B">B</option>
+        <option value="B">-</option>
       </select>
       <select id="mataKuliah" name="mataKuliah" required>
         <option value="">Pilih Mata Kuliah</option>
