--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aplikasi Absensi - Tema Gelap</title>
+  <title>Aplikasi Absensi</title>
   <!-- Link ke style.css -->
   <link rel="icon" href="icon.png" type="image/png">
   <link rel="stylesheet" href="style.css" />
