--- a/index.html
+++ b/index.html
@@ -5,33 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Aplikasi Absensi</title>
   <link rel="icon" href="icon.png" type="image/png">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="background-animation"></div>
   
   <div class="container">
-    <h1>Absensi Mahasiswa</h1>
+    <h1><i class="fa-solid fa-user-check"></i> Absensi Mahasiswa</h1>
     <form id="absensiForm">
-      <input type="text" id="nama" name="nama" placeholder="Nama" required />
-      <input type="text" id="nim" name="nim" placeholder="NIM" required />
-      <select id="kelas" name="kelas" required>
-        <option value="">Pilih Kelas</option>
-        <option value="A">A</option>
-        <option value="B">B</option>
-        <option value="-">-</option>
-      </select>
-      <select id="mataKuliah" name="mataKuliah" required>
-        <option value="">Pilih Mata Kuliah</option>
-        <option value="Cloud Computing">Cloud Computing</option>
-        <option value="Pemrograman Web">Pemrograman Web</option>
-        <option value="Desain dan Manajemen Jaringan Komputer">
-          Desain dan Manajemen Jaringan Komputer
-        </option>
-      </select>
+      <div class="input-group">
+        <i class="fa-solid fa-user"></i>
+        <input type="text" id="nama" name="nama" placeholder="Nama" required />
+      </div>
+      <div class="input-group">
+        <i class="fa-solid fa-id-badge"></i>
+        <input type="text" id="nim" name="nim" placeholder="NIM" required />
+      </div>
+      <div class="input-group">
+        <i class="fa-solid fa-chalkboard"></i>
+        <select id="kelas" name="kelas" required>
+          <option value="">Pilih Kelas</option>
+          <option value="A">A</option>
+          <option value="B">B</option>
+          <option value="-">-</option>
+        </select>
+      </div>
+      <div class="input-group">
+        <i class="fa-solid fa-book"></i>
+        <select id="mataKuliah" name="mataKuliah" required>
+          <option value="">Pilih Mata Kuliah</option>
+          <option value="Cloud Computing">Cloud Computing</option>
+          <option value="Pemrograman Web">Pemrograman Web</option>
+          <option value="Desain dan Manajemen Jaringan Komputer">Desain dan Manajemen Jaringan Komputer</option>
+        </select>
+      </div>
       <!-- Lokasi didapatkan secara otomatis -->
       <input type="hidden" id="lokasi" name="lokasi" />
-      <button type="submit">Submit Absensi</button>
+      <button type="submit"><i class="fa-solid fa-paper-plane"></i> Submit Absensi</button>
     </form>
 
     <!-- Dropdown untuk memilih MK live feed -->
@@ -40,9 +54,7 @@
       <select id="liveMK">
         <option value="Cloud Computing">Cloud Computing</option>
         <option value="Pemrograman Web">Pemrograman Web</option>
-        <option value="Desain dan Manajemen Jaringan Komputer">
-          Desain dan Manajemen Jaringan Komputer
-        </option>
+        <option value="Desain dan Manajemen Jaringan Komputer">Desain dan Manajemen Jaringan Komputer</option>
       </select>
     </div>
 
