--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <input type="text" id="nim" name="nim" placeholder="NIM" required />
       </div>
       <div class="input-group">
-        <i class="fa-solid fa-chalkboard"></i>
+        <i class="fa-solid"></i>
         <select id="kelas" name="kelas" required>
           <option value="">Pilih Kelas</option>
           <option value="A">A</option>
@@ -35,7 +35,7 @@
         </select>
       </div>
       <div class="input-group">
-        <i class="fa-solid fa-book"></i>
+        <i class="fa-solid"></i>
         <select id="mataKuliah" name="mataKuliah" required>
           <option value="">Pilih Mata Kuliah</option>
           <option value="Cloud Computing">Cloud Computing</option>
